# testcoin

testcoin/: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  configure.ac
testcoin/.tx/: config
testcoin/build-aux/m4/: chncoin_find_bdb48.m4  chncoin_qt.m4  chncoin_subdir_to_include.m4
testcoin/contrib/: README.md  chncoin-qt.pro  chncoind.bash-completion  qt_translations.py  tidy_datadir.sh
testcoin/contrib/bitrpc/: README.md  bitrpc.py
testcoin/contrib/debian/: README.md  changelog  chncoin-qt.desktop  chncoin-qt.install  chncoin-qt.lintian-overrides  chncoin-qt.protocol  chncoin-tx.install  chncoind.bash-completion  chncoind.examples  chncoind.install  chncoind.lintian-overrides  chncoind.manpages  control  copyright  rules  watch
testcoin/contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
testcoin/contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
testcoin/contrib/gitian-downloader/: linux-download-config  win32-download-config
testcoin/contrib/init/: README.md  chncoind.conf  chncoind.openrc  chncoind.openrcconf  chncoind.service
testcoin/contrib/linearize/: README.md  example-linearize.cfg  (+2 more)
testcoin/depends/: README  README.usage  config.site.in
testcoin/doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  coding.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md
testcoin/share/: setup.nsi.in  ui.rc
testcoin/src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparams1.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  chncoin-cli-res.rc  chncoin-cli.cpp  chncoin-tx.cpp  chncoind-res.rc  chncoind.cpp  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  (+86 more)
testcoin/src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
testcoin/src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  rfc6979_hmac_sha256.cpp  rfc6979_hmac_sha256.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
testcoin/src/json/: json_spirit_value.h  json_spirit_writer_template.h
testcoin/src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
testcoin/src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  chncoin.cpp  chncoin.qrc  chncoin_locale.qrc  chncoinaddressvalidator.cpp  chncoinaddressvalidator.h  chncoinamountfield.cpp  chncoinamountfield.h  chncoingui.cpp  chncoingui.h  chncoinstrings.cpp  chncoinunits.cpp  chncoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.cpp  (+62 more)
testcoin/src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
testcoin/src/qt/locale/: chncoin_ach.ts  chncoin_af_ZA.ts  chncoin_ar.ts  chncoin_be_BY.ts  chncoin_bg.ts  chncoin_bs.ts  chncoin_ca.ts  chncoin_ca@valencia.ts  chncoin_ca_ES.ts  chncoin_cmn.ts  chncoin_cs.ts  chncoin_cy.ts  chncoin_da.ts  chncoin_de.ts  chncoin_el_GR.ts  chncoin_en.ts  chncoin_eo.ts  chncoin_es.ts  chncoin_es_CL.ts  chncoin_es_DO.ts  chncoin_es_MX.ts  chncoin_es_UY.ts  chncoin_et.ts  chncoin_eu_ES.ts  chncoin_fa.ts  chncoin_fa_IR.ts  chncoin_fi.ts  chncoin_fr.ts  chncoin_fr_CA.ts  chncoin_gl.ts  chncoin_gu_IN.ts  chncoin_he.ts  chncoin_hi_IN.ts  chncoin_hr.ts  chncoin_hu.ts  chncoin_id_ID.ts  chncoin_it.ts  chncoin_ja.ts  chncoin_ka.ts  chncoin_kk_KZ.ts  (+31 more)
testcoin/src/qt/res/: chncoin-qt-res.rc
testcoin/src/qt/res/icons/: chncoin.icns
testcoin/src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
testcoin/src/script/: chncoinconsensus.cpp  chncoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
testcoin/src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
testcoin/src/secp256k1/src/java/: org_chncoin_NativeSecp256k1.c  org_chncoin_NativeSecp256k1.h
testcoin/src/secp256k1/src/java/org/chncoin/: NativeSecp256k1.java
testcoin/src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  chncoin-util-test.py  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_chncoin.cpp  timedata_tests.cpp  transaction_tests.cpp  (+3 more)
testcoin/src/test/data/: README.md  chncoin-util-test.json  tx_valid.json
testcoin/src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
(+116 files in other folders)
